--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,8 +34,15 @@
           </a>
         </div>
       </div>
+      <div class="card social-block">
+        <div class="card-body">
+          <a class="btn btn-block btn-social btn-linkedin" href="/auth/linkedin" role="button">
+            <i class="fab fa-linkedin"></i>
+            Sign In with LinkedIn
+          </a>
+        </div>
+      </div>
     </div>
-
   </div>
 </div>
 
