--- a/views/register.ejs
+++ b/views/register.ejs
@@ -25,7 +25,7 @@
     </div>
 
     <div class="col-sm-4">
-      <div class="card social-block">
+      <div class="card">
         <div class="card-body">
           <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
@@ -33,8 +33,15 @@
           </a>
         </div>
       </div>
+      <div class="card social-block">
+        <div class="card-body">
+          <a class="btn btn-block btn-social btn-linkedin" href="/auth/linkedin" role="button">
+            <i class="fab fa-linkedin"></i>
+            Sign Up with LinkedIn
+          </a>
+        </div>
+      </div>
     </div>
-
   </div>
 </div>
 
